<?xml version="1.0"?>
<package format="2">
  <name>otokar_simulation</name>
  <version>1.0.0</version>
  <description>The otokar_simulation package</description>

  <maintainer email="didem.ozupektas@inovasyonmuhendislik.com">Didem OZUPEK TAS</maintainer>
  <maintainer email="kerem.erdogmus@inovasyonmuhendislik.com">Alim Kerem Erdogmus</maintainer>

  <license>Apache 2.0</license>
  <url>http://wiki.ros.org/phm_tools</url>


  <buildtool_depend>catkin</buildtool_depend>

  <!--
  <exec_depend>agv_msgs</exec_depend>
  <exec_depend>phm_hazard_rate_calculation</exec_depend>
  <exec_depend>phm_msgs</exec_depend>
  <exec_depend>phm_reliability_calculation</exec_depend>
  <exec_depend>phm_robot_task_completion</exec_depend>
  <exec_depend>phm_start</exec_depend>
  -->
  <export>
    <metapackage/>
  </export>
</package>
