<?xml version="1.0"?>
<package format="2">
  <name>otokar_simulation</name>
  <version>1.0.0</version>
  <description>The otokar_simulation package</description>

  <maintainer email="didem.ozupektas@inovasyonmuhendislik.com">Didem OZUPEK TAS</maintainer>
  <maintainer email="kerem.erdogmus@inovasyonmuhendislik.com">Alim Kerem Erdogmus</maintainer>

  <license>Apache 2.0</license>
  <url>http://wiki.ros.org/phm_tools</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
